--- a/public/404.html
+++ b/public/404.html
@@ -3,24 +3,15 @@
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
   <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+    body { background-color: #8b99ab; color: #fff; text-align: center; font-family: arial, sans-serif; }
   </style>
 </head>
 
 <body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+  <div>
+    <h1>Passmaster</h1>
+    <h2>404</h2>
+    <h2>The page you were looking for does not exist.</h2>
   </div>
 </body>
 </html>
