make 500 page generic

--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>We're sorry, but something went wrong</title>
   <style type="text/css">
     body { background-color: #8b99ab; color: #fff; text-align: center; font-family: arial, sans-serif; }
   </style>
@@ -10,7 +10,6 @@
 <body>
   <div>
     <h1>Passmaster</h1>
-    <h2>500</h2>
     <h2>We're sorry, but something went wrong.</h2>
   </div>
 </body>
