stupid SED wont send json attachments either

--- a/public/accounts_viewer.html
+++ b/public/accounts_viewer.html
@@ -111,7 +111,7 @@
     <form enctype='multipart/form-data' id='backup_form' onsubmit='formSubmitted(); return false;'>
       <div class='field'>
         <label for='backup_file'>Backup File</label>
-        <input accept='application/json' id='backup_file' name='file' type='file'>
+        <input accept='text/plain' id='backup_file' name='file' type='file'>
       </div>
       <div class='field'>
         <label for='backup_password'>Backup Password</label>
